--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,9 +21,8 @@
 
       <footer class="site-footer">
         {% if site.github.is_project_page %}
-          <span class="site-footer-owner"><a href="{{ site.github.repository_url }}">{{ site.github.repository_name }}</a> is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a>.</span>
+            <span class="site-footer-credits">by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a>.</span>\
         {% endif %}
-        <span class="site-footer-credits">by <a href="https://blockchainedindia.com">Blockchained India</a>.</span>
       </footer>
     </section>
   </body>
